[core/engine] feat: add dynamic vector-api probe and parallel interpreter matmul